# bar_chart_race

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
bar_chart_race/: _bar_chart_race.py
demo/: computer_science_schools.csv  demo.py
src/bar_chart_race/: __init__.py  _bar_chart_race.py  _bar_chart_race_plotly.py  _colormaps.py  _common_chart.py  _func_animation.py  _line_chart_race.py  _pandas_accessor.py  _utils.py
tests/: test_core.py  test_utils.py
