[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bar_chart_race"
dynamic = ["version"]
description = "Create animated bar chart races using matplotlib or plotly"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Yeongseon Choe", email = "yeongsoen.choe@gmail.com" }
]
keywords = ["visualization", "animation", "bar chart", "race", "matplotlib", "pandas", "plotly"]
dependencies = [
  "polars>=0.20.0",
  "pandas>=0.24",
  "matplotlib>=3.1",
  "pillow>=9.5.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/dexplo/bar_chart_race"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bar_chart_race"]

[tool.setuptools.dynamic]
version = { attr = "bar_chart_race.__version__" }
