[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bar_chart_race"
dynamic = ["version"]
description = "Create animated bar chart races using matplotlib or plotly"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Yeongseon Choe", email = "yeongsoen.choe@gmail.com" }
]
keywords = ["visualization", "animation", "bar chart", "race", "matplotlib", "pandas", "plotly"]
dependencies = [
  "pandas>=0.24",
  "matplotlib>=3.1",
  "pillow>=9.5.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.12.0",
  "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/dexplo/bar_chart_race"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bar_chart_race"]

[tool.setuptools.dynamic]
version = { attr = "bar_chart_race.__version__" }

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(.
    git
  | .venv
  | build
  | dist
  | __pycache__
  | .mypy_cache
  | .pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "build", "dist"]
